[gd_scene load_steps=9 format=3 uid="uid://4h183oy5hfs8"]

[ext_resource type="Script" path="res://src/entities/basket/basket.gd" id="1_lintc"]
[ext_resource type="Texture2D" uid="uid://c7mjkutaiklje" path="res://assets/basket/basket.png" id="2_6hfvy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kts0q"]
size = Vector2(4, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmt7r"]
size = Vector2(4, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tebis"]
size = Vector2(14, 6)

[sub_resource type="Animation" id="Animation_10d2q"]
resource_name = "CREATURE_IN"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.666667), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(12, -6), Vector2(12, -4), Vector2(12, -6)]
}

[sub_resource type="Animation" id="Animation_emub2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, -6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qgpqw"]
_data = {
"CREATURE_IN": SubResource("Animation_10d2q"),
"RESET": SubResource("Animation_emub2")
}

[node name="Basket" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_lintc")

[node name="CapturedCreatures" type="Node2D" parent="."]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="CapturedCreatures"]
position = Vector2(12, -4)
rect = Rect2(-20, -20, 40, 40)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(12, -6)
texture = ExtResource("2_6hfvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -5)
shape = SubResource("RectangleShape2D_kts0q")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(22, -5)
shape = SubResource("RectangleShape2D_cmt7r")

[node name="CreatureDetector" type="Area2D" parent="."]
position = Vector2(12, -5)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CreatureDetector"]
shape = SubResource("RectangleShape2D_tebis")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qgpqw")
}

[node name="SpawnBoundaryLeft" type="Marker2D" parent="."]
position = Vector2(5, 0)

[node name="SpawnBoundaryRight" type="Marker2D" parent="."]
position = Vector2(20, 0)

[connection signal="body_entered" from="CreatureDetector" to="." method="_on_creature_detector_body_entered"]
